# SFL

./: CMakeLists.txt  SFL-specs.txt
BuildGTest/: CMakeLists.txt
SFL-interpreter/: CMakeLists.txt
SFL-interpreter/src/: main.cpp
SFL-lib/: CMakeLists.txt
SFL-lib/Interpreter/: CMakeLists.txt
SFL-lib/Interpreter/UnitTests/: CMakeLists.txt  Interpreter_test.cpp
SFL-lib/Interpreter/include/Interpreter/: Interpreter.h  InterpreterError.h  Value.h
SFL-lib/Interpreter/src/: Interpreter.cpp  InterpreterError.cpp  Value.cpp
SFL-lib/Lexer/: CMakeLists.txt
SFL-lib/Lexer/UnitTests/: CMakeLists.txt  Lexer_test.cpp
SFL-lib/Lexer/include/Lexer/: Lexer.h
SFL-lib/Lexer/src/: Lexer.cpp
SFL-lib/Parser/: CMakeLists.txt
SFL-lib/Parser/UnitTests/: CMakeLists.txt  Parser_test.cpp
SFL-lib/Parser/include/Parser/: Parser.h
SFL-lib/Parser/src/: Parser.cpp
SFL-lib/include/SFL/: SFL.h
SFL-lib/src/: SFL.cpp
